# SignalMonitor

./: .gitignore  CMakeLists.txt  README.md  config.h.in
App/Assets/: icon.rc  res.qrc
App/Inc/: chartwidget.h  datasource.h  datastreamparser.h  fft.hpp  fftdatasource.h  globalSettings.h  mainchartswidget.h  mainwindow.h  mycustomplot.h  pch.h  qcustomplot.h  serial.h
App/Src/: chartwidget.cpp  chartwidget.ui  datasource.cpp  datastreamparser.cpp  fft.cpp  fftdatasource.cpp  main.cpp  mainchartswidget.cpp  mainchartswidget.ui  mainwindow.cpp  mainwindow.ui  mycustomplot.cpp  serial.cpp
